Un-hardcode most of tool defintion data
Migrated harvest, AOE, weapon, traits, tool actions, and modifier slots to tool modules
Use loadables to parse tool definition data instead of GSON (between not calling your constructors and handling missing as null, GSON is kinda annoying)
This will allow some nice features in the future, such as global tool definitions (add modules to all tools matching a tag!)
Parts and stats will come later, they need more redesigning